--- a/sass/var/form/field/Base.scss
+++ b/sass/var/form/field/Base.scss
@@ -2,7 +2,7 @@ $form-field-background-color: #fff !default;
 $form-field-border-width: 1px !default;
 $form-field-border-color: #e7e7e7 !default;
 $form-field-border-radius: 3px !default;
-$form-field-padding: 10px !default;
+$form-field-padding: 0px 10px 0px 10px !default;
 $form-field-color: #424242 !default;
 $form-field-height: 31px !default;
 
